refactor: rename widget-statehistory to widget-heatmap and update related files

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
     <head>
         <meta charset="utf-8" />
-        <title>State History</title>
+        <title>Heatmap</title>
         <style>
             html,
             body {
@@ -25,17 +25,17 @@
 
         <script type="module">
             import { html, render } from 'lit'
-            import '../dist/widget-statehistory.js'
+            import '../dist/widget-heatmap.js'
             const data = await fetch('../src/default-data.json').then((res) => res.json())
             const themeObject = await fetch('themes/vintage.json').then((res) => res.json())
             const theme = { theme_name: 'vintage', theme_object: themeObject }
 
             render(
                 html`
-                    <widget-statehistory-1.0.3 .theme="${theme}" .inputData=${data}>
+                    <widget-heatmap-1.0.0 .theme="${theme}" .inputData=${data}>
                         web component is not registered. Make sure to use the tag with the correct version
                         string from the package.json
-                    </widget-statehistory-1.0.3>
+                    </widget-heatmap-1.0.0>
                 `,
                 document.querySelector('#demo')
             )
