--- a/demo/index.html
+++ b/demo/index.html
@@ -24,18 +24,21 @@
         <script src="https://storage.googleapis.com/reswarm-images/ObjectRandomizer.js"></script>
 
         <script type="module">
-            import { html, render } from 'lit'
+            import { render } from 'lit'
+            import { html, unsafeStatic } from 'lit/static-html.js'
+            const packageJson = await fetch('../package.json').then((res) => res.json())
+            const tag = unsafeStatic(`widget-heatmap-${packageJson.version}`)
             import '../dist/widget-heatmap.js'
             const data = await fetch('../src/default-data.json').then((res) => res.json())
-            const themeObject = await fetch('themes/vintage.json').then((res) => res.json())
-            const theme = { theme_name: 'vintage', theme_object: themeObject }
+            const themeObject = await fetch('themes/chalk.json').then((res) => res.json())
+            const theme = { theme_name: 'chalk', theme_object: themeObject }
 
             render(
                 html`
-                    <widget-heatmap-1.0.4 .theme="${theme}" .inputData=${data}>
+                    <${tag} .theme="${theme}" .inputData=${data}>
                         web component is not registered. Make sure to use the tag with the correct version
                         string from the package.json
-                    </widget-heatmap-1.0.4>
+                    </${tag}>
                 `,
                 document.querySelector('#demo')
             )
